--- a/custom.css
+++ b/custom.css
@@ -1,9 +1,13 @@
 #inCov {
-	position: relative;
-	top: -100px;
+	margin-top: -100px;
 }
 
 #weather_alert {
+	margin-top: 20px;
+	display: none;
+}
+
+#weather_invalid {
 	margin-top: 20px;
 	display: none;
 }
